--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 
-# publish_mode: editorial_workflow # allows for edits to posts before posting.
+publish_mode: editorial_workflow # allows for edits to posts before posting.
 
 media_folder: "static/images/uploads" # where files should be store when posting from cms.
 public_folder: "/images/uploads" 
