--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ paginate = 5
 [languages]
   [languages.en]
     languageName = "English"
-    title = "Terminal"
+    title = "Mathie_Josh"
     subtitle = "A simple, retro theme for Hugo"
     owner = ""
     keywords = ""
