--- a/config.toml
+++ b/config.toml
@@ -75,7 +75,7 @@ paginate = 5
     [[languages.en.menu.main]]
         identifier = "blog"
         name = "Blog"
-        url = "/posts/blog/"
+        url = "blog/"
           
     [[languages.en.menu.main]]
         identifier = "art"
