--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ disqusShortname = "mathiejosh-xyz"
   showLanguageSelector = false
 
   # set theme to full screen width
-  fullWidthTheme = true
+  fullWidthTheme = false
 
   # center theme with default width
   centerTheme = true
