--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
       - {label: "Draft", name: "draft", widget: "boolean", default: true}
       - {label: "Categories", name: "categories", widget: "string", required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
+      - {label: "Featured Image", name: "cover", widget: "image", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: Type, name: type, widget: hidden, default: "art"}
       - {label: "Body", name: "body", widget: "markdown"}
