Upded descriptions, and Netlify CMS

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,6 +18,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required:false}
+      - {label: "Decription", name: "desciption", widget: hidden, required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -30,6 +31,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
+      - {label: "Decription", name: "desciption", widget: hidden, required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -42,6 +44,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
+      - {label: "Decription", name: "desciption", widget: hidden, required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -54,6 +57,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
+      - {label: "Decription", name: "desciption", widget: hidden, required: false}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie} 
       - {label: "Body", name: "body", widget: "markdown"}
