--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
-      - {label: "Featured Image", name: "cover", widget: "image", required:false}
+      - {label: "Featured Image", name: "cover", widget: "image", required: false}
       - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
@@ -44,7 +44,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
-      - {label: "Decription", name: "desciption", widget: string"", required: true}
+      - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
