--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ googleAnalytics = "UA-177349046-1"
    [[languages.en.menu.main]]
         identifier = "contact"
         name = "Contact Me"
-        url = "/pages/contact/"
+        url = "/contact"
         
 
 
