--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "UA-177349046-1"
   contentTypeName = "posts"
 
   # ["orange", "blue", "red", "green", "pink"]
-  themeColor = "red"
+  themeColor = "purple"
 
   # if you set this to 0, only submenu trigger will be visible
   showMenuItems = 6
@@ -31,7 +31,7 @@ googleAnalytics = "UA-177349046-1"
   # set post to show the last updated
   # If you use git, you can set `enableGitInfo` to `true` and then post will automatically get the last updated
   showLastUpdated = true
-  #enagleGitInfo = true
+  enagleGitInfo = true
   
  # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
    updatedDatePrefix = "Updated"
