update theme color back to red

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "UA-177349046-1"
   contentTypeName = "posts"
 
   # ["orange", "blue", "red", "green", "pink"]
-  themeColor = ":root"
+  themeColor = "red"
 
   # if you set this to 0, only submenu trigger will be visible
   showMenuItems = 6
