--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 theme = "terminal"
-paginate = 5
+paginate = 6
 disqusShortname = "mathiejosh-xyz"
 googleAnalytics = "UA-177349046-1"
 
@@ -95,6 +95,13 @@ googleAnalytics = "UA-177349046-1"
         identifier = "contact"
         name = "Contact Me"
         url = "/contact"
+  
+  [[languages.en.menu.main]]
+        identifier = "MythosReborn"
+        name = "Mythos Reborn"
+        url = ""
         
+
+      
 
 
