--- a/config.toml
+++ b/config.toml
@@ -52,8 +52,8 @@ googleAnalytics = "UA-177349046-1"
     languageName = "English"
     title = "[Mathie@josh]#"
     subtitle = "A simple, retro theme for Hugo"
-    owner = ""
-    keywords = ""
+    owner = "Josh M"
+    keywords = "Linux"
     copyright = ""
     menuMore = "Show more"
     readMore = "Read more"
