--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: master
+  branch: main
 
 publish_mode: editorial_workflow # allows for edits to posts before posting.
 
@@ -17,8 +17,8 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
-      - {label: "Featured Image", name: "cover", widget: "image", required:false}
-      - {label: "Decription", name: "desciption", widget: hidden, required: false}
+      - {label: "Featured Image", name: "cover", widget: "image", required: false}
+      - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -31,7 +31,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
-      - {label: "Decription", name: "desciption", widget: hidden, required: false}
+      - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -44,7 +44,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
-      - {label: "Decription", name: "desciption", widget: hidden, required: false}
+      - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -57,7 +57,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "cover", widget: "image", required: false}
-      - {label: "Decription", name: "desciption", widget: hidden, required: false}
+      - {label: "Decription", name: "desciption", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Joshua Mathie} 
       - {label: "Body", name: "body", widget: "markdown"}
