--- a/config.toml
+++ b/config.toml
@@ -5,17 +5,9 @@ pagination.pagerSize = 6
 disqusShortname = "mathiejosh-xyz"
 googleAnalytics = "UA-177349046-1"
 
-#[markup]
-#  [markup.goldmark]
-#  [markup.goldmark.extensions]
-#      [markup.goldmark.extensions.passthrough]
-#        enable = true
-#        [markup.goldmark.extensions.passthrough.delimiters]
-#          block = [['\[', '\]'], ['$$', '$$']]
-#          inline = [['\(', '\)']]
 [params]
-   # mathtex
- #  math = true
+ # mathtex
+   math = true
 
   # dir name of your main content (default is `content/posts`).
   # the list of set content will show up on your index page (baseurl).
